--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "ace-builds": "^1.4.8",
     "babel-loader": "^8.0.6",
     "chillogger": "^1.0.103",
+    "classnames": "^2.2.6",
     "cors": "^2.8.5",
     "css-loader": "^3.4.2",
     "express": "^4.17.1",
     "express-ws": "^4.0.0",
+    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
