--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "post-apocalypse",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "poast.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node posta"
   },
   "author": "",
   "license": "ISC",
